# OpenGl-Breakout

./: CMakeLists.txt  README.md
Include/: Game.h  Game.hpp  GameLevel.h  ResourceManager.hpp  Shader.h  SpriteRenderer.h  SpriteRenderer.hpp
Src/: Game.cpp  Main.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp
